--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -7,7 +7,7 @@
     tools:context="com.example.administrator.news.activity.GuideActivity">
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/viewpage"
+        android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
